# crypto-order-book

./: .gitignore  Cargo.toml  README.md
binance/: Cargo.toml  README.md
binance/experiment_2/: .gitignore  Cargo.toml
binance/experiment_2/src/: id_ticker.rs  main.rs  model.rs
binance/src/: error.rs  lib.rs  model.rs
bitstamp/: Cargo.toml
bitstamp/src/: error.rs  lib.rs  model.rs  order_book_client.rs  subscribe.rs  subscribe_guard.rs
bitstamp/src/model/: message.rs  order_book.rs  subscription_succeeded.rs
bitstamp/src/model/message/: channel.rs  currency_pair.rs  event.rs
client/: Cargo.toml
client/src/: main.rs
coding-diary/: book.toml
coding-diary/src/: .SUMMARY.md.un~  .binance_notes.md.un~  .day_1.md.un~  .todo.md.un~  SUMMARY.md  binance_notes.md  day_1.md  todo.md
experiments/binance/experiment_1/: ..gitignore.un~  Cargo.toml
experiments/binance/experiment_1/src/: README.md  main.rs
experiments/binance/experiment_2/: Cargo.toml
experiments/binance/experiment_2/src/: error.rs  main.rs  model.rs  stream.rs
experiments/bitstamp/experiment_1/: Cargo.toml
experiments/bitstamp/experiment_1/src/: error.rs  main.rs  model.rs  subscribe_guard.rs
experiments/bitstamp/experiment_1/src/model/: message.rs  order_book.rs  request.rs  response.rs
experiments/bitstamp/experiment_1/src/model/message/: channel.rs  event.rs
model/: Cargo.toml
model/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: api.rs  lib.rs  main.rs  model.rs
