[package]
name = "binance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0"
tokio-tungstenite = { version = "0", features = ["native-tls"] }
tokio-stream = "0"
thiserror = "1"
serde_json = "1"
futures = "0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0", features = ["serde"] }
log = "0"
