[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0", features = ["compression", "prost"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
prost = "0"
futures = "0"

[build-dependencies]
tonic-build = { version = "0", features = ["prost", "compression"] }
