[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { path = "../binance" }
bitstamp = { path = "../bitstamp" }
tonic = { version = "0", features = ["compression", "prost"] }
prost = "0"

[build-dependencies]
tonic-build = { version = "0", features = ["prost", "compression"] }
