[package]
name = "experiment_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tokio-tungstenite = { version = "0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
parse-display = "0"
log = "0"
pretty_env_logger = "0"
futures = "0"
