[package]
name = "experiment_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../../../model" }
tokio = { version = "1", features = ["full"] }
chrono = "0"
time = "0.1.44"                                                  # To match chrono's so we can use chrono errors that come from the time crate
thiserror = "1"
tokio-tungstenite = { version = "0", features = ["native-tls"] }
tokio-stream = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
parse-display = "0"
log = "0"
pretty_env_logger = "0"
futures = "0"
